--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+<title>yazidprojet2</title>
 <link rel="stylesheet"type="text/css"href="yazid.css"/>
 <link rel="stylesheet" type="text/css" href="file:///Users/apple/Desktop/yazid2/fontawesome-free-5.15.3-web/css/all.css">
 <body>
@@ -36,11 +37,11 @@
 </form>
 </div>
 </div>
-    <div class="element04"><h2><strong>Filtres</strong></h2>
-<div class="list1"><i class="fas fa-money-bill-wave"></i><p><strong>Economique</strong></p></p></div>
-<div class="list2"><i class="fas fa-child"></i><p><strong>Familial</strong></P></div>
-<div class="list3"><i class="fas fa-heart"></i><p><strong>Romantique</strong></p></div>
-<div class="list4"><i class="fas fa-dog"></i><p><strong>Animaux Autorises</strong></p></div></div>
+    <div class="element04"><h2>Filtres</h2>
+<div class="list1"><i class="fas fa-money-bill-wave"></i><p>Economique</p></p></div>
+<div class="list2"><i class="fas fa-child"></i><p>Familial</P></div>
+<div class="list3"><i class="fas fa-heart"></i><p>Romantique</p></div>
+<div class="list4"><i class="fas fa-dog"></i><p>Animaux Autorises</p></div></div>
     <div class="element05"><div class="info2"><i class="fas fa-info searchResultWrapiconIcon"></i></div>
 <p class="info3">Plus de 500 logements sont disponibles dans cette ville</p>
 </div>
@@ -48,12 +49,12 @@
 
 <div id="yazid">
 <div id="container">
-<h3>Hébergements à Marseille</h3>
+<h3 id="Hebergement">Hébergements à Marseille</h3>
 <div id="conteneur">
 
     <div class="element">
 <img src="0001.jpg"width="100%"height="100%">
-<p><p2><strong>Auberge le panier</strong><br>Nuit a partir de <strong>23$</strong></p2></p>
+<p>Auberge le panier<br>Nuit a partir de <strong>23$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -63,7 +64,7 @@
         </div>
 </div>
     <div class="element"><img src="1111.jpg"width="100%"height="100%">
-<p><p2><strong>Hotel ches amina</strong><br>Auit a partir de <strong>96$</strong></p2></p>
+<p>Hotel ches amina<br>Auit a partir de <strong>96$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -73,7 +74,7 @@
 </div>       
 </div>
     <div class="element"><img src="0005.jpg"width="100%"height="100%">
-<p><p2><strong>Auberge la canneliers</strong><br>Nuit a partir de <strong>90$</strong></p2></p>
+<p>Auberge la canneliers<br>Nuit a partir de <strong>90$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -82,7 +83,7 @@
         <span><i class="fas fa-star "></i></span>               
             </div></div>
     <div class="element"><img src="0002.jpg"width="100%"height="100%">
-<p><p2><strong>Hotel du port</strong><br>Nuit a partir de <strong>52$</strong></p2></p>
+<p>Hotel du port<br>Nuit a partir de <strong>52$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -91,7 +92,7 @@
               <i class="fas fa-star "></i></span>               
             </div></div>
     <div class="element"><img src="1234.jpg"width="100%"height="100%">
-<p><p2><strong>Auberge de la mer</strong><br>Nuit a partir de <strong>46$</strong></p2></p>
+<p>Auberge de la mer<br>Nuit a partir de <strong>46$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -100,7 +101,7 @@
               <i class="fas fa-star "></i></span>               
        </div></div>
     <div class="element"><img src="0000.jpg"width="100%"height="100%">
-<p><p2><strong>Auberge le panier</strong><br>Nuit a partir de <strong>23$</strong></p2></p>
+<p>Auberge le panier<br>Nuit a partir de <strong>23$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -120,7 +121,7 @@
     <div class="element11">
 <Img src="1223.jpg"width="100%"height="100%">
 <div class="wax">
-<p><strong>Hotel soleil du matin</strong><br>nuit a prtir de <strong>128$</strong></p>
+<p>Hotel soleil du<br>matin<br>nuit a prtir de <strong>128$</strong></p>
 <div class="star1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -133,9 +134,9 @@
 </div>
     <div class="element11">
 
-<Img src="1111.jpg"width="100%"height="100%">
+<Img src="999.jpg"width="100%"height="100%">
 <div class="wax">
-<p><strong>Au coeur de l'eau<br> chambres d'hotes</strong> <br>nuit  a prtir de <strong>71$</strong></p>
+<p>Au coeur de l'eau<br> chambres d'hotes<br>nuit  a prtir de <strong>71$</strong></p>
 <div class="star1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -150,7 +151,7 @@
 
 <Img src="2222.jpg"width="100%"height="100%">
 <div class="wax">
-<p><strong>Hotel tout blue et<br> blanc</strong><br>nuit a prtir de <strong>68$</strong></p>
+<p>Hotel tout blue et<br> blanc<br>nuit a prtir de <strong>68$</strong></p>
 <div class="star1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -164,14 +165,14 @@
 </div>
 </div>
 <div class="wrapper1">
-<h2>Activités à Marseille</h2>
+<h2 id="activites">Activités à Marseille</h2>
 <div class="wrapper">
-  <div class="one"><img src="123450.jpg"><p>yazid</p></div>
-  <div class="two"><img src="444.jpg"width="100%px"height="100%x"><p>yazid</p></div>
-  <div class="three"><img src="555.jpg"width="100%"height="100%"><p>yazid</p></div>
-  <div class="four"><img src="789.jpg"width="100%"height="100%"><p>yazid</p></div>
-  <div class="five"><img src="0004.jpg"width=""height=""><p>yazid</p></div>
-  <div class="six"><img src="888.jpg"width="100%"height="100%"><p>yazid</p></div>
+  <div class="one"><img src="123450.jpg"><p>Vieux Port</p></div>
+  <div class="two"><img src="444.jpg"width="100%px"height="100%x"><p>Île du Frioul</p></div>
+  <div class="three"><img src="555.jpg"width="100%"height="100%"><p>Fort de Pomègues</p></div>
+  <div class="four"><img src="789.jpg"width="100%"height="100%"><p>Parc National des Calanques</p></div>
+  <div class="five"><img src="0004.jpg"width=""height=""><p>Notre-Dame-de-la-Garde</p></div>
+  <div class="six"><img src="888.jpg"width="100%"height="100%"><p>Parc Longchamp</p></div>
 </div>
 </div>
 <div id="footer">
