--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="main">
 <div class="title">
 <div class="reservia">
-    <img src="/Users/apple/Desktop/yazid2/Reservia.svg"></div>
+    <img src="Reservia.svg"></div>
    
         <div class="navi">
 <a href="#Hebergement"><div class="ins">Hebergment</div></a>
