--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="element04"><h2>Filtres</h2>
 <div class="list">
-<div class="list1"><i class="fas fa-money-bill-wave"></i><p>Economique</p></p></div>
+<div class="list1"><i class="far fa-money-bill"></i><p>Economique</p></p></div>
 <div class="list2"><i class="fas fa-child"></i><p>Familial</P></div>
 </div>
 <div class="list3"><i class="fas fa-heart"></i><p>Romantique</p></div>
