--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="element04"><h2>Filtres</h2>
 <div class="list">
-<div class="list1"><i class="fab fa-500px"></i><p>Economique</p></p></div>
+<div class="list1"><i class="fas fa-money-bill-wave"></i><p>Economique</p></p></div>
 <div class="list2"><i class="fas fa-child"></i><p>Familial</P></div>
 </div>
 <div class="list3"><i class="fas fa-heart"></i><p>Romantique</p></div>
@@ -67,7 +67,7 @@
 
     <div class="element">
 <img src="0001.jpg"width="100%"height="100%">
-<p>Auberge le panier<br>Nuit a partir de <strong>23$</strong></p>
+<p><strong>Auberge le panier</strong><br>Nuit a partir de <strong>23$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -77,7 +77,7 @@
         </div>
 </div>
     <div class="element"><img src="1111.jpg"width="100%"height="100%">
-<p>Hotel ches amina<br>Auit a partir de <strong>96$</strong></p>
+<p><strong>Hotel ches amina</strong><br>Nuit a partir de <strong>96$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -87,7 +87,7 @@
 </div>       
 </div>
     <div class="element"><img src="0005.jpg"width="100%"height="100%">
-<p>Auberge la canneliers<br>Nuit a partir de <strong>90$</strong></p>
+<p><strong>Auberge la canneliers</strong><br>Nuit a partir de <strong>90$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -96,7 +96,7 @@
         <span><i class="fas fa-star "></i></span>               
             </div></div>
     <div class="element"><img src="0002.jpg"width="100%"height="100%">
-<p>Hotel du port<br>Nuit a partir de <strong>52$</strong></p>
+<p><strong>Hotel du port</strong><br>Nuit a partir de <strong>52$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -105,7 +105,7 @@
               <i class="fas fa-star "></i></span>               
             </div></div>
     <div class="element"><img src="1234.jpg"width="100%"height="100%">
-<p>Auberge de la mer<br>Nuit a partir de <strong>46$</strong></p>
+<p><strong>Auberge de la mer</strong></strong><br>Nuit a partir de <strong>46$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -114,7 +114,7 @@
               <i class="fas fa-star "></i></span>               
        </div></div>
     <div class="element"><img src="0000.jpg"width="100%"height="100%">
-<p>Auberge le panier<br>Nuit a partir de <strong>23$</strong></p>
+<p> <strong>Auberge la cannebiere</strong><br>Nuit a partir de <strong>25$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -134,7 +134,7 @@
     <div class="element11">
 <Img src="1223.jpg"width="100%"height="100%">
 <div class="wax">
-<p>Hotel soleil du<br>matin<br>nuit a prtir de <strong>128$</strong></p>
+<p><strong>Hotel soleil du<br>matin </strong>nuit a prtir de <strong>128$</strong></p>
 <div class="star1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -149,7 +149,7 @@
 
 <Img src="999.jpg"width="100%"height="100%">
 <div class="wax">
-<p>Au coeur de l'eau<br> chambres d'hotes<br>nuit  a prtir de <strong>71$</strong></p>
+<p><strong>Au coeur de l'eau<br> chambres d'hotes<br></strong>nuit  a prtir de <strong>71$</strong></p>
 <div class="star1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -164,7 +164,7 @@
 
 <Img src="2222.jpg"width="100%"height="100%">
 <div class="wax">
-<p>Hotel tout blue et<br> blanc<br>nuit a prtir de <strong>68$</strong></p>
+<p><strong>Hotel tout blue et<br> blanc <br></strong>nuit a prtir de <strong>68$</strong></p>
 <div class="star1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -188,6 +188,8 @@
   <div class="six"><img src="888.jpg"width="100%"height="100%"><p>Parc Longchamp</p></div>
 </div>
 </div>
+</div>
+
 <div id="footer">
    <div class="footer1">
     <div class="element5"> 
@@ -213,7 +215,5 @@
 </div>
 </div>
 </div>
-</div>
 </body>
-
 </html>
