--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>yazidprojet2</title>
-<link rel="stylesheet"type="text/css"href="yazid.css"/>
+<link rel="stylesheet"type="text/css"href="stylesheet.css"/>
 <link rel="stylesheet" type="text/css" href="file:///Users/apple/Desktop/yazid2/fontawesome-free-5.15.3-web/css/all.css">
 </head>
 <body>
@@ -134,7 +134,7 @@
     <div class="element11">
 <Img src="1223.jpg"width="100%"height="100%">
 <div class="wax">
-<p><strong>Hotel soleil du<br>matin </strong>nuit a prtir de <strong>128$</strong></p>
+<p><strong>Hotel soleil du<br>matin <br></strong>nuit a prtir de <strong>128$</strong></p>
 <div class="star1">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
