--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>yazidprojet2</title>
 <link rel="stylesheet"type="text/css"href="stylesheet.css"/>
-<link rel="stylesheet" type="text/css" href="file:///Users/apple/Desktop/yazid2/fontawesome-free-5.15.3-web/css/all.css">
+<link rel="stylesheet"type="text/css" href="fontawesome-free-5.15.3-web/css/all.css">
 </head>
 <body>
 <div id="main">
