ajoute du fichier

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="element04"><h2>Filtres</h2>
 <div class="list">
-<div class="list1"><i class="fas fa-money-bill-alt"></i><p>Economique</p></p></div>
+<div class="list1"><i class="fas fa-money-bill-wave"></i><p>Economique</p></p></div>
 <div class="list2"><i class="fas fa-child"></i><p>Familial</P></div>
 </div>
 <div class="list3"><i class="fas fa-heart"></i><p>Romantique</p></div>
