modif du fichier

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<!DOCTYPE html >
+<html lang="fr">
 <head>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>yazidprojet2</title>
+<title>reservia</title>
 <link rel="stylesheet"type="text/css"href="stylesheet.css">
 <link rel="stylesheet" href="css/all.min.css">
 <link rel="stylesheet" href="css/fontawsome.min.css">
 </head>
 <body>
+
 <div id="main">
        <div class="title">
            <div class="reservia">
@@ -16,7 +18,7 @@
               <div class="navi">
                 <div class="ins"><a href="#Hebergement">hebergment</a></div>
                 <div class="inss"><a href="#activites">Activites</a></div>
-             </div>
+                 </div>
                  <div class="navi1">
                    <div class="insss"> <a href="#"> s'inscrire</a></div>            
                  </div>
@@ -47,14 +49,15 @@
 </div>
 
 
-<div class="element04"><h2>Filtres</h2>
+<div class="element04">
+<h2>Filtres</h2>
 <div class="list">
 <div class="list1"><i class="fas fa-money-bill-wave"></i><p>Economique</p></div>
 <div class="list2"><i class="fas fa-child"></i><p>Familial</P></div>
-</div>
+
 <div class="list3"><i class="fas fa-heart"></i><p>Romantique</p></div>
 <div class="list4"><i class="fas fa-dog"></i><p>Animaux Autorises</p></div>
-
+</div>
 </div>
 
 <div class="element05">
@@ -182,10 +185,11 @@ la canneliere">
 </div>
 </div>
 </div>
+
 <div class="wrapper1">
 <h2 id="activites">Activités à Marseille</h2>
 <div class="wrapper">
-  <div class="one"><img src="123450.jpg"alt="port"><p>Vieux Port</p></div>
+  <div class="one"><img src="123450.jpg"width="100%"height="100%"alt="port"><p>Vieux Port</p></div>
   <div class="two"><img src="444.jpg"width="100%px"height="100%x"alt="ile"><p>Île du Frioul</p></div>
   <div class="three"><img src="555.jpg"width="100%"height="100%"alt="fort"><p>Fort de Pomègues</p></div>
   <div class="four"><img src="789.jpg"width="100%"height="100%"alt="parc"><p>Parc National des Calanques</p></div>
@@ -194,6 +198,7 @@ la canneliere">
 </div>
 </div>
 </div>
+
 
 <div id="footer">
    <div class="footer1">
@@ -221,5 +226,6 @@ la canneliere">
 </div>
 </div>
 </div>
+
 </body>
 </html>
