--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html >
-<html lang="fr">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>reservia</title>
-<link rel="stylesheet"type="text/css"href="stylesheet.css">
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 <link rel="stylesheet" href="css/all.min.css">
 <link rel="stylesheet" href="css/fontawsome.min.css">
+<link rel="stylesheet"  href="src.css">
 </head>
 <body>
 
 <div id="main">
+    <nav>
        <div class="title">
-           <div class="reservia">
-               <img src="Reservia.svg"alt="logo-reservia">
+           <div class="reservia-logo">
+               <img src="reservia.svg" alt="logo-reservia">
            </div>
-              <div class="navi">
-                <div class="ins"><a href="#Hebergement">hebergment</a></div>
-                <div class="inss"><a href="#activites">Activites</a></div>
+              <div class="menu-nav-1">
+                <div class="hebergement"><a href="#Hebergement">hébergment</a></div>
+                <div class="activites"><a href="#activites">Activites</a></div>
                  </div>
-                 <div class="navi1">
-                   <div class="insss"> <a href="#"> s'inscrire</a></div>            
+                 <div class="menu-nav-2">
+                   <div class="inscrire"> <a href="#"> s'inscrire</a></div>            
                  </div>
        </div>
 <div id="head">
@@ -30,7 +32,7 @@
 </div>
 <div class="element03">
 <form method="post" action="traitement.php">
-<div class="png">
+<div class="map">
 <i class="fas fa-map-marker-alt"></i>
 </div>
 
@@ -66,14 +68,17 @@
 <p class="info3">Plus de 500 logements sont disponibles dans cette ville</p>
 </div>
 </div>
-
+</nav>
+<section>
 <div id="yazid">
+
 <div id="container">
 <h3 id="Hebergement">Hébergements à Marseille</h3>
+
 <div id="conteneur">
 
     <div class="element">
-<img src="0001.jpg"width="100%"height="100%"alt="auberge le panier">
+<img src="0001.jpg"  alt="auberge le panier">
 <p><strong>Auberge le panier</strong><br>Nuit a partir de <strong>23$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
@@ -83,7 +88,7 @@
         <span><i class="fas fa-star "></i></span>               
         </div>
 </div>
-    <div class="element"><img src="1111.jpg"width="100%"height="100%"alt="hotel chez Amina">
+    <div class="element"><img src="1111.jpg"  alt="hotel chez Amina">
 <p><strong>Hotel ches amina</strong><br>Nuit a partir de 96<strong>$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
@@ -93,7 +98,7 @@
               <i class="fas fa-star "></i>              
 </div>       
 </div>
-    <div class="element"><img src="0005.jpg"width="100%"height="100%"alt="auberge la canneliers">
+    <div class="element"><img src="0005.jpg"  alt="auberge la canneliers">
 <p><strong>Auberge la canneliers</strong><br>Nuit a partir de <strong>90$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
@@ -102,7 +107,7 @@
               <i class="fas fa-star"></i>
         <span><i class="fas fa-star "></i></span>               
             </div></div>
-    <div class="element"><img src="0002.jpg"width="100%"height="100%"alt="hotel du port">
+    <div class="element"><img src="0002.jpg"  alt="hotel du port">
 <p><strong>Hotel du port</strong><br>Nuit a partir de 52<strong>$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
@@ -111,7 +116,7 @@
          <span><i class="fas fa-star"></i>
               <i class="fas fa-star "></i></span>               
             </div></div>
-    <div class="element"><img src="1234.jpg"width="100%"height="100%"alt="auberge de la mer">
+    <div class="element"><img src="1234.jpg"  alt="auberge de la mer">
 <p><strong>Auberge de la mer</strong><br>Nuit a partir de 46<strong>$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
@@ -120,7 +125,7 @@
         <span><i class="fas fa-star"></i>
               <i class="fas fa-star "></i></span>               
        </div></div>
-    <div class="element"><img src="0000.jpg"width="100%"height="100%"alt="auberge
+    <div class="element"><img src="0000.jpg"  alt="auberge
 la canneliere">
 <p> <strong>Auberge la cannebiere</strong><br>Nuit a partir de <strong>25$</strong></p>
 <div class="star2">
@@ -134,13 +139,14 @@ la canneliere">
 </div>
 <h3>Afficher plus</h3>
 </div>
+
 <div id="yijiao">
 <div class="graph">
 <h3>les plus populaire</h3>
 <i class="fas fa-chart-line"></i></div>
 <div class="elem11">
     <div class="element11">
-<Img src="1223.jpg"width="100%"height="100%"alt="hotel soleil du matin">
+<Img src="1223.jpg"  alt="hotel soleil du matin">
 <div class="wax">
 <p><strong>Hotel soleil du<br>matin <br></strong>nuit a prtir de <strong>128$</strong></p>
 <div class="star1">
@@ -155,7 +161,7 @@ la canneliere">
 </div>
     <div class="element11">
 
-<Img src="999.jpg"width="100%"height="100%"alt="au coeur de l'eau chambre d'hotes">
+<Img src="999.jpg"  alt="au coeur de l'eau chambre d'hotes">
 <div class="wax">
 <p><strong>Au coeur de l'eau<br> chambres d'hotes<br></strong>nuit  a prtir de <strong>71$</strong></p>
 <div class="star1">
@@ -170,7 +176,7 @@ la canneliere">
 </div>
     <div class="element11"> 
 
-<Img src="2222.jpg"width="100%"height="100%"alt="hotel tout blue et blanc">
+<Img src="2222.jpg"  alt="hotel tout blue et blanc">
 <div class="wax">
 <p><strong>Hotel tout blue et<br> blanc <br></strong>nuit a prtir de <strong>68$</strong></p>
 <div class="star1">
@@ -184,22 +190,25 @@ la canneliere">
 </div>
 </div>
 </div>
-</div>
 
+</div>
+</section>
+<section>
 <div class="wrapper1">
 <h2 id="activites">Activités à Marseille</h2>
 <div class="wrapper">
-  <div class="one"><img src="123450.jpg"width="100%"height="100%"alt="port"><p>Vieux Port</p></div>
-  <div class="two"><img src="444.jpg"width="100%px"height="100%x"alt="ile"><p>Île du Frioul</p></div>
-  <div class="three"><img src="555.jpg"width="100%"height="100%"alt="fort"><p>Fort de Pomègues</p></div>
-  <div class="four"><img src="789.jpg"width="100%"height="100%"alt="parc"><p>Parc National des Calanques</p></div>
-  <div class="five"><img src="0004.jpg"width="100%"height="100%"alt="notre-dame"><p>Notre-Dame-de-la-Garde</p></div>
-  <div class="six"><img src="888.jpg"width="100%"height="100%"alt="Longchamp"><p>Parc Longchamp</p></div>
+  <div class="one"><img src="3333.jpg" alt="port"><p>Vieux Port</p></div>
+  <div class="two"><img src="444.jpg" alt="ile"><p>Île du Frioul</p></div>
+  <div class="three"><img src="555.jpg" alt="fort"><p>Fort de Pomègues</p></div>
+  <div class="four"><img src="789.jpg" alt="parc"><p>Parc National des Calanques</p></div>
+  <div class="five"><img src="0404.jpg" alt="notre-dame"><p>Notre-Dame-de-la-Garde</p></div>
+  <div class="six"><img src="888.jpg" alt="Longchamp"><p>Parc Longchamp</p></div>
 </div>
 </div>
+</section>
 </div>
 
-
+<footer>
 <div id="footer">
    <div class="footer1">
     <div class="element5"> 
@@ -226,6 +235,6 @@ la canneliere">
 </div>
 </div>
 </div>
-
+</footer>
 </body>
 </html>
