--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 <link rel="stylesheet" href="css/all.min.css">
 <link rel="stylesheet" href="css/fontawsome.min.css">
-<link rel="stylesheet"  href="src.css">
+
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <nav>
        <div class="title">
            <div class="reservia-logo">
-               <img src="reservia.svg" alt="logo-reservia">
+               <img src="Reservia.svg" alt="logo-reservia">
            </div>
               <div class="menu-nav-1">
                 <div class="hebergement"><a href="#Hebergement">hébergment</a></div>
@@ -37,7 +37,7 @@
 </div>
 
 <div class="recherche"> 
-<input type="text"  value="marseille France">
+<input type="text"  value="" placeholder="marseille France">
 </div>
 <div class="bouton">
 <i class=" fas fa-search"></i>
