--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                    <div class="inscrire"> <a href="#"> s'inscrire</a></div>            
                  </div>
        </div>
-    </div>
+    </nav>
 <div id="main">
 <div id="head">
     <div class="element01">
@@ -82,59 +82,59 @@
 <img src="0001.jpg"  alt="auberge le panier">
 <p><strong>Auberge le panier</strong><br>Nuit a partir de <strong>23$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>              
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>              
         </div>
 </div>
     <div class="container-element-1"><img src="1111.jpg"  alt="hotel chez Amina">
 <p><strong>Hotel ches amina</strong><br>Nuit a partir de 96<strong>$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star "></i>              
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>              
 </div>       
 </div>
     <div class="container-element-1"><img src="0005.jpg"  alt="auberge la canneliers">
 <p><strong>Auberge la canneliers</strong><br>Nuit a partir de <strong>90$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star "></i>               
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>               
             </div></div>
     <div class="container-element-1"><img src="0002.jpg"  alt="hotel du port">
 <p><strong>Hotel du port</strong><br>Nuit a partir de 52<strong>$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star "></i>              
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star "style=" Color:#F2F2F2;"></i>              
             </div></div>
     <div class="container-element-1"><img src="1234.jpg"  alt="auberge de la mer">
 <p><strong>Auberge de la mer</strong><br>Nuit a partir de 46<strong>$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star "></i>          
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>          
        </div></div>
     <div class="container-element-1"><img src="0000.jpg"  alt="auberge
 la canneliere">
 <p> <strong>Auberge la cannebiere</strong><br>Nuit a partir de <strong>25$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star "></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star "style=" Color:#F2F2F2;"></i>
         </div></div>
     
 </div>
@@ -151,11 +151,11 @@ la canneliere">
 <div class="wax">
 <p><strong>Hotel soleil du<br>matin <br></strong>nuit a prtir de <strong>128$</strong></p>
 <div class="star1">
-              <i class="fas fa-star color-red"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>           
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>           
             </div>
   </div>
 
@@ -166,11 +166,11 @@ la canneliere">
 <div class="wax">
 <p><strong>Au coeur de l'eau<br> chambres d'hotes<br></strong>nuit  a prtir de <strong>71$</strong></p>
 <div class="star1">
-              <i class="fas fa-star star-red"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>
+              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>
               
             </div>
 </div>
@@ -181,11 +181,11 @@ la canneliere">
 <div class="wax">
 <p><strong>Hotel tout blue et<br> blanc <br></strong>nuit a prtir de <strong>68$</strong></p>
 <div class="star1">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star "></i>              
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>
+              <i class="fas fa-star"style=" Color:#0065FC;"></i>              
             </div>
 </div>
 </div>
