--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
        <div class="title">
            <div class="reservia-logo">
-               <img src="reservia.svg" alt="logo-reservia">
+               <img src="Reservia.svg" alt="logo-reservia">
            </div>
               <div class="menu-nav-1">
                 <div class="hebergement"><a href="#hebergement">Hébergment</a></div>
